# evosugar_1.0

./: ASK_NEW_FEATURES  AUTHORS  BUGS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  intltool-merge  intltool-update  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  en_AU.gmo  en_AU.po  es_ES.gmo  es_ES.po  eu_ES.gmo  eu_ES.po  (+1 more)
src/: Makefile  Makefile.am  Makefile.in  apps-evolution-evosugar.schemas.in  com-irontec-evosugar.eplug.xml  com-irontec-evosugar.error.xml  debug.sh  evosugar.c  scrm.c  scrm.h
src/.deps/: evosugar.Plo  scrm.Plo  soapC.Plo  soapClient.Plo
src/gui/: Accounts.xpm  Contacts.xpm  Leads.xpm  Opportunities.xpm  Project.xpm  ProjectTask.xpm  Users.xpm  about.xpm  evosugar.ui  leftarrow.xpm  rightarrow.xpm
src/lib/: ayuda  compilaSSL.sh  compilaSSL_login.sh  ejemplomd5.c  hello.c  login  login.c  quote.h  soapC.c  soapClient.c  soapClientLib.c  soapH.h  soapServer.c  soapServerLib.c  soapStub.h  sugar.h  sugar.wsdl  sugar.wsdl.old  sugarsoapBinding.contact_by_email.req.xml  sugarsoapBinding.contact_by_email.res.xml  sugarsoapBinding.create_account.req.xml  sugarsoapBinding.create_account.res.xml  sugarsoapBinding.create_case.req.xml  sugarsoapBinding.create_case.res.xml  sugarsoapBinding.create_contact.req.xml  sugarsoapBinding.create_contact.res.xml  sugarsoapBinding.create_lead.req.xml  sugarsoapBinding.create_lead.res.xml  sugarsoapBinding.create_opportunity.req.xml  sugarsoapBinding.create_opportunity.res.xml  sugarsoapBinding.create_session.req.xml  sugarsoapBinding.create_session.res.xml  sugarsoapBinding.end_session.req.xml  sugarsoapBinding.end_session.res.xml  sugarsoapBinding.get_attendee_list.req.xml  sugarsoapBinding.get_attendee_list.res.xml  sugarsoapBinding.get_available_modules.req.xml  sugarsoapBinding.get_available_modules.res.xml  sugarsoapBinding.get_contact_relationships.req.xml  sugarsoapBinding.get_contact_relationships.res.xml  (+113 more)
src/lib/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  index.html  page_XMLDataBinding.html  page_notes.html  pages.html  quote_8h_source.html  soapH_8h_source.html  soapStub_8h_source.html  structcontact__USCOREdetail__USCOREarray-members.html  structcontact__USCOREdetail__USCOREarray.html  structentry__USCORElist-members.html  structentry__USCORElist.html  structfield__USCORElist-members.html  structfield__USCORElist.html  structids__USCOREmods-members.html  structids__USCOREmods.html  structlink__USCOREarray__USCORElist-members.html  structlink__USCOREarray__USCORElist.html  structlink__USCOREfield__USCORElist-members.html  structlink__USCOREfield__USCORElist.html  structlink__USCORElist-members.html  structlink__USCORElist.html  structlink__USCORElists-members.html  structlink__USCORElists.html  structlink__USCOREvalue-members.html  structlink__USCOREvalue.html  structname__USCOREvalue__USCORElist-members.html  structname__USCOREvalue__USCORElist.html  structname__USCOREvalue__USCORElists-members.html  structname__USCOREvalue__USCORElists.html  structname__USCOREvalue__USCOREoperator__USCORElist-members.html  structname__USCOREvalue__USCOREoperator__USCORElist.html  structnew__USCOREset__USCORErelationhip__USCOREids-members.html  structnew__USCOREset__USCORErelationhip__USCOREids.html  structnewsletter__USCORElist-members.html  structnewsletter__USCORElist.html  (+201 more)
src/lib/html/search/: all_5f.html  all_63.html  all_64.html  all_65.html  all_66.html  all_68.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  classes_63.html  classes_65.html  classes_66.html  classes_69.html  classes_6e.html  classes_73.html  classes_75.html  search.js  variables_61.html  variables_63.html  variables_65.html  variables_66.html  variables_69.html  variables_6c.html  variables_6e.html  variables_73.html  variables_75.html
